# MIPT-ProgrammingLangs-2017

./: README.md
1/1/: CMakeLists.txt  test1.c  widgets.cpp  widgets.h
1/2/: CMakeLists.txt  object.h  test2.c  widgets.cpp
1/3/: CMakeLists.txt  build.sh  object.h  pywidgets.c  setup.py  test3.py  widgets.cpp  widgets.h
2/: createTable.js  main.html
3/TicTacToe/: Package.swift  README.md
3/TicTacToe/Config/: server.json
3/TicTacToe/Public/styles/: app.css
3/TicTacToe/Resources/Views/: game.leaf
3/TicTacToe/Sources/App/: Droplet+Socket.swift  Routes.swift
3/TicTacToe/Sources/App/Controllers/: GameController.swift
3/TicTacToe/Sources/App/Models/: Game.swift
3/TicTacToe/Sources/Run/: main.swift
3/TicTacToe/TicTacToe.xcodeproj/: project.pbxproj
3/TicTacToe/TicTacToe.xcodeproj/GeneratedModuleMap/CHTTP/: module.modulemap
3/TicTacToe/TicTacToe.xcodeproj/project.xcworkspace/xcuserdata/Alexander.xcuserdatad/: UserInterfaceState.xcuserstate
3/TicTacToe/TicTacToe.xcodeproj/xcshareddata/xcschemes/: TicTacToe-Package.xcscheme  xcschememanagement.plist
3/TicTacToe/TicTacToe.xcodeproj/xcuserdata/Alexander.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
3/TicTacToe/TicTacToe.xcodeproj/xcuserdata/Alexander.xcuserdatad/xcschemes/: xcschememanagement.plist
4/: erl_crash.dump
4/img/: erl_crash.dump
4/src/: steganography.erl
